<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2013 Ulrik Andersson.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v3.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/gpl.html
  
  Contributors:
      Ulrik Andersson - initial API and implementation
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/menu_search"
		android:title="@string/common_search"
		android:icon="@drawable/ic_action_search"
		android:showAsAction="collapseActionView|ifRoom"
		android:actionViewClass="com.actionbarsherlock.widget.SearchView" />
   
    
        
    <item 
        android:id="@+id/menu_edit" 
        android:showAsAction="ifRoom" 
        android:icon="@drawable/ic_action_edit"
        android:visible="false"
        android:title="@string/common_edit" /><item android:id="@+id/menu_sort" android:showAsAction="ifRoom" android:icon="@drawable/ic_sort" android:title="@string/common_sort" android:visible="false" >
            <menu>
                <item android:id="@+id/sort_title" android:title="@string/sort_title"/>
                <item android:id="@+id/sort_added" android:title="@string/sort_added"/>
                <item android:id="@+id/sort_rating" android:title="@string/sort_rating"/>
            </menu>
        </item>
       
</menu>
