<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2013 Ulrik Andersson.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v3.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/gpl.html
  
  Contributors:
      Ulrik Andersson - initial API and implementation
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/common_name"        
	        style="@style/MyListTextAppearanceSmall"
	        android:layout_weight="1"
	        android:gravity="center_vertical|left" />
	    
	    <TextView
	        android:layout_width="65dip"
	        android:layout_height="wrap_content"
	        android:text="@string/comic_author"
	        style="@style/MyListTextAppearanceSmall"
	        android:layout_weight="0" />
	
	    <TextView
	        android:layout_width="65dip"
	        android:layout_height="wrap_content"
	        android:text="@string/comic_illustrator"
	        style="@style/MyListTextAppearanceSmall"
	        android:layout_weight="0" />
	    
	    <TextView
	        android:layout_width="35dip"
	        android:layout_height="wrap_content"
	        android:text="@string/common_none"
	        style="@style/MyListTextAppearanceSmall"
	        android:layout_weight="0" />    
	        		    
	</LinearLayout>

	<View
    	android:layout_width="fill_parent"
    	android:layout_height="1dp"
    	android:layout_marginTop="2dp"
    	android:layout_marginBottom="2dp"
    	android:background="@android:color/darker_gray"/>
	
</LinearLayout>
