<!--
  Copyright (c) 2013 Ulrik Andersson.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v3.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/gpl.html
  
  Contributors:
      Ulrik Andersson - initial API and implementation
-->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:id="@+id/drawer_layout"
 android:layout_width="match_parent"
 android:layout_height="match_parent">
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:padding="5dp">

	    <include layout="@layout/service_progress" />
	    
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/watched_heading"
			android:padding="10dp"
	        android:paddingTop="5dp"
	        android:layout_marginBottom="2dp"
	        android:textColor="@color/altFg1"
	        android:background="@color/contentBg"
	        android:textSize="25sp"
	        android:textStyle="bold" />

	    <Button
	        android:id="@+id/btnAmazonSearch"
	        style="@style/ButtonText"
	        android:layout_width="match_parent"
	        android:layout_height="35dp"
	        android:background="@drawable/button"
	        android:onClick="searchAmazon"
	        android:text="@string/common_search" />
	    	    	    	    	
	    <TextView 
	        android:id="@+id/watched_tvEmpty"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textColor="#999999"
	        android:textSize="18sp"
	        android:padding="20dp"
	        android:text="@string/watched_empty"
	        android:visibility="gone"
	        />
	    
	    <ExpandableListView
	        android:id="@+id/watched_elvGroups"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:listSelector="@android:color/transparent"
			android:divider="@android:color/transparent"
	        android:dividerHeight="5dp" />    
	</LinearLayout>
	
	<include layout="@layout/navigation_drawer_left" />
</android.support.v4.widget.DrawerLayout>
