<!--
  Copyright (c) 2013 Ulrik Andersson.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v3.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/gpl.html
  
  Contributors:
      Ulrik Andersson - initial API and implementation
-->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:id="@+id/drawer_layout"
 android:layout_width="match_parent"
 android:layout_height="match_parent">
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:padding="5dp"
	    android:background="@color/abs__background_holo_light" >
	       
		<include layout="@layout/service_progress" />
	    
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="vertical">

	    <TextView
	        android:id="@+id/comicView_txtTitle"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text=""
			style="@style/TextViewLargeHeading" />
		    	    		    
		    <RelativeLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="2dp"
		        android:background="@color/contentBg"	 
		        android:padding="@dimen/padding_s"
		        android:paddingLeft="@dimen/padding_m"
		        android:paddingRight="@dimen/padding_m"       
		        android:orientation="horizontal" >
		        
		        <CheckBox
		            android:id="@+id/comicView_cbIsRead"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/comic_isread" />	        
		        
		        <RatingBar
		            android:id="@+id/rbComicView"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            style="?android:attr/ratingBarStyleIndicator"
		            android:layout_alignParentRight="true"		            
		            android:isIndicator="false"
				    android:numStars="5"
				    android:stepSize="1" />
		        		        
		    </RelativeLayout>

		    <ScrollView
		        android:id="@+id/comicView_svContent"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" >
		        			    	    
			<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="vertical"
			    android:background="@color/contentBg"
			    android:padding="5dp" >
		    		    
				<LinearLayout 
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal" >
				
				    <ImageView
				        android:id="@+id/comicView_ivImage"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_weight="0"
				        android:layout_marginRight="10dp"
				        android:src="@drawable/ic_launcher" />
				    
					<LinearLayout
					    android:layout_width="0dip"
					    android:layout_height="wrap_content"
					    android:layout_weight="1"
					    android:orientation="vertical" >
					
						<!-- Subtitle -->
		
					    <TextView
					        android:id="@+id/comicView_tvSubtitleHeading"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:layout_marginBottom="-2dp"
					        android:text="@string/comic_subtitle"
					        android:textSize="@dimen/text_small" />
					
					    <TextView
					        android:id="@+id/comicView_txtSubtitle"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:text=""
					        android:paddingBottom="5dp"
					        android:textSize="@dimen/text_medium" />
					
						<View
						    android:id="@+id/comicView_vSubtitleDivider"
					    	android:layout_width="fill_parent"
					    	android:layout_height="1dp"
					    	android:background="@android:color/darker_gray"/>
							
						<!-- AUTHOR -->
		
					    <TextView
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:layout_marginBottom="-2dp"
					        android:text="@string/comic_author"
					        android:textSize="@dimen/text_small" />
					
					    <TextView
					        android:id="@+id/comicView_txtAuthor"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:text=""
					        android:paddingBottom="5dp"
					        android:textSize="@dimen/text_medium" />
					
						<View
					    	android:layout_width="fill_parent"
					    	android:layout_height="1dp"
					    	android:background="@android:color/darker_gray"/>	
					</LinearLayout>
				</LinearLayout>
				
				<!-- Illustrator -->
		
			    <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginBottom="-2dp"
			        android:text="@string/comic_illustrator"
			        android:textSize="@dimen/text_small" />
			
			    <TextView
			        android:id="@+id/comicView_txtIllustrator"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:paddingBottom="5dp"
			        android:textSize="@dimen/text_medium" />
			
				<View
			    	android:layout_width="fill_parent"
			    	android:layout_height="1dp"
			    	android:background="@android:color/darker_gray"/>
							
				<!-- Publisher -->
		
			    <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginBottom="-2dp"
			        android:text="@string/comic_publisher"
			        android:textSize="@dimen/text_small" />
			
			    <TextView
			        android:id="@+id/comicView_txtPublisher"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:paddingBottom="5dp"
			        android:textSize="@dimen/text_medium" />
			
				<View
			    	android:layout_width="fill_parent"
			    	android:layout_height="1dp"
			    	android:background="@android:color/darker_gray"/>

				<!-- Issues -->
		
			    <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginBottom="-2dp"
			        android:text="@string/comic_issues"
			        android:textSize="@dimen/text_small" />
			
			    <TextView
			        android:id="@+id/comicView_txtIssues"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:paddingBottom="5dp"
			        android:textSize="@dimen/text_medium" />
			
				<View
			    	android:layout_width="fill_parent"
			    	android:layout_height="1dp"
			    	android:background="@android:color/darker_gray"/>
												
				<!-- Publishdate -->
		
			    <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginBottom="-2dp"
			        android:text="@string/comic_datepublished"
			        android:textSize="@dimen/text_small" />
			
			    <TextView
			        android:id="@+id/comicView_txtPublished"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:paddingBottom="5dp"
			        android:textSize="@dimen/text_medium" />
			
				<View
			    	android:layout_width="fill_parent"
			    	android:layout_height="1dp"
			    	android:background="@android:color/darker_gray"/>
				
				<!-- Added -->
		
			    <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginBottom="-2dp"
			        android:text="@string/comic_dateadded"
			        android:textSize="@dimen/text_small" />
			
			    <TextView
			        android:id="@+id/comicView_txtAdded"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:paddingBottom="5dp"
			        android:textSize="@dimen/text_medium" />
			
				<View
			    	android:layout_width="fill_parent"
			    	android:layout_height="1dp"
			    	android:background="@android:color/darker_gray"/>
				
				<!-- Pagecount -->
		
			    <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginBottom="-2dp"
			        android:text="@string/comic_pagecount"
			        android:textSize="@dimen/text_small" />
			
			    <TextView
			        android:id="@+id/comicView_txtPageCount"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:paddingBottom="5dp"
			        android:textSize="@dimen/text_medium" />
			
				<View
			    	android:layout_width="fill_parent"
			    	android:layout_height="1dp"
			    	android:background="@android:color/darker_gray"/>
				
				<!-- Borrowed -->
		
			    <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginBottom="-2dp"
			        android:text="@string/comicview_borrowed"
			        android:textSize="@dimen/text_small" />
			
				<EditText
				    android:id="@+id/comicView_etBorrower"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:imeOptions="actionDone"
				    android:inputType="text|textPersonName"
				    android:singleLine="true" >
		
				</EditText>
								
			</LinearLayout>
			</ScrollView>
			
		</LinearLayout>
	</LinearLayout>
	
	<include layout="@layout/navigation_drawer_left" />
</android.support.v4.widget.DrawerLayout>
